--- a/uroomies-client/src/styles/login.css
+++ b/uroomies-client/src/styles/login.css
@@ -1,23 +1,40 @@
 .login-body {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100vw;
     box-sizing: border-box;
+}
+
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
 
 }
 
 .login-form {
+    position: relative;
+    font-family: 'Georgia', serif;
+    background-color: transparent;
+}
+
+.form-wrapper {
+    position: relative;
     padding: 50px;
-    background-color: #3a2a65;
+    background-color: rgba(58, 42, 101, 0.8);
     border-radius: 22px;
-    max-width: 650px;
-    max-height: 700px;
+    max-width: 600px;
+    max-height: 800px;
     height: 100%;
     width: 100%;
     box-sizing: border-box;
-    font-family: 'Georgia', serif;
 }
 
 .login-form label {
@@ -50,8 +67,8 @@
 .login-form input[type="text"],
 .login-form input[type="password"] {
     width: 100%;
-    border-radius: 10px;
-    padding: 7px;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 .login-form input[type="submit"] {
