--- a/uroomies-client/src/styles/Landing.css
+++ b/uroomies-client/src/styles/Landing.css
@@ -9,15 +9,35 @@ html, body {
 }
 
 body {
+    position: relative;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
     min-height: 100vh;
+    box-sizing: border-box;
 }
 
 .landing-container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow: hidden;
+}
+
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    opacity: 0.5; 
+    z-index: -1;
 }
 
 .body {
@@ -28,10 +48,12 @@ body {
     text-align: center;
     padding: 5vh 5vw;
     background-color: transparent;
+    position: relative;
+    z-index: 1;
 }
 
 .body h1 {
-    font-size: 4rem;
+    font-size: 6rem;
     font-weight: bold;
     color: #333;
     margin-bottom: 3rem;
