--- a/uroomies-client/src/styles/login.css
+++ b/uroomies-client/src/styles/login.css
@@ -6,9 +6,10 @@
     height: 100vh;
     width: 100vw;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
-.background-image {
+.login-background-image {
     position: absolute;
     top: 0;
     left: 0;
@@ -16,7 +17,6 @@
     height: 100%;
     object-fit: cover;
     opacity: 0.5;
-
 }
 
 .login-form {
@@ -66,9 +66,11 @@
 
 .login-form input[type="text"],
 .login-form input[type="password"] {
+    display: block;
     width: 100%;
     border-radius: 5px;
     padding: 10px;
+    margin-bottom: 1vh;
 }
 
 .login-form input[type="submit"] {
