--- a/uroomies-client/src/styles/login.css
+++ b/uroomies-client/src/styles/login.css
@@ -85,6 +85,16 @@
     color: white;
 }
 
+.login-form input[type="submit"]:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+    transform: translateY(-0.3rem);
+}
+
+.login-form input[type="submit"]:active {
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+
 
 
 
