--- a/uroomies-client/src/styles/Landing.css
+++ b/uroomies-client/src/styles/Landing.css
@@ -29,14 +29,14 @@ body {
     overflow: hidden;
 }
 
-.background-image {
+.landing-background-image {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover; 
-    opacity: 0.5; 
+    opacity: 0.4; 
     z-index: -1;
 }
 
