--- a/uroomies-client/src/styles/Signup.css
+++ b/uroomies-client/src/styles/Signup.css
@@ -6,6 +6,7 @@
     height: 100vh;
     width: 100vw;
     box-sizing: border-box;
+    /* overflow: hidden; */
 }
 
 .signup-background-image {
@@ -23,6 +24,18 @@
     position: relative;
     font-family: 'Georgia', serif;
     background-color: transparent;
+}
+
+.form-wrapper {
+    position: relative;
+    padding: 50px;
+    background-color: rgba(58, 42, 101, 0.8);
+    border-radius: 22px;
+    max-width: 600px;
+    max-height: 800px;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .signup-form label {
