--- a/uroomies-client/src/styles/Header.css
+++ b/uroomies-client/src/styles/Header.css
@@ -2,16 +2,22 @@
 .header {
     background-color: #3a2a65;
     color: #ffffff;
-    padding: 2rem 0;
-    flex-shrink: 0;
     width: 100%;
+    padding: 1rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    position: fixed;
+    position: fixed; /* Keep header fixed at the top */
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 1000; /* Ensure it stays on top of other content */
+    box-sizing: border-box; /* Include padding within the width */
+    transition: top 0.3s ease-in-out; /* Smooth transition for hiding/showing */
+}
+
+/* Class to Hide Header */
+.header-hidden {
+    top: -100px; /* Move the header off-screen */
 }
 
 /* Header Button Styles */
