--- a/uroomies-client/src/styles/Footer.css
+++ b/uroomies-client/src/styles/Footer.css
@@ -4,13 +4,13 @@
     color: #ffffff;
     padding: 1rem 0;
     width: 100%;
-    margin-top: auto; /* Ensures the footer pushes to the bottom */
+    margin-top: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative; /* Normal flow */
-    flex-shrink: 0; /* Prevents the footer from shrinking */
-    box-sizing: border-box; /* Ensures padding is considered within the width */
+    position: relative; 
+    flex-shrink: 0;
+    box-sizing: border-box; 
 }
 
 /* Centering Icons */
