--- a/uroomies-client/src/styles/UserProfile.css
+++ b/uroomies-client/src/styles/UserProfile.css
@@ -1,39 +1,36 @@
-.top-border {
-    position: fixed;
-    width: 100vw; 
-    height: 2px; 
-    background-color: blue;
-    top: 125px; 
-    left: 0;
-    margin: 0; 
-    padding: 0; 
-    box-sizing: border-box; 
-    z-index: 1000; 
-}
-
-.bottom-border {
-    position: fixed;
-    width: 100vw; 
-    height: 2px; 
-    background-color: blue;
-    bottom: 125px; 
-    left: 0;
-    margin: 0; 
-    padding: 0; 
-    box-sizing: border-box; 
-    z-index: 1000; 
-}
-
-.user-profile-body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    position: relative;
 }
 
-.user-profile-information {
-    margin-top: 127px;
+body {
+    display: block;
 }
+
+html, body {
+    height: 100%;
+    font-family: 'Arial', sans-serif;
+    background-color: #f9f9f9;
+    color: #333;
+    overflow-x: hidden;
+}
+
+.user-profile-container {
+    flex: 1;
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    margin-top: 20px;
+}
+
+.user-profile-page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+
+
+
