--- a/uroomies-client/src/styles/ConnectionsList.css
+++ b/uroomies-client/src/styles/ConnectionsList.css
@@ -1,15 +1,11 @@
 /* Container for connections with scalable height */
 .connections-container {
-    width: 70%;
-    max-width: 400px;
-    height: 25vh;
-    min-height: 200px;
-    max-height: 500px; 
+    width: 100%;
+    height: 87%;
     overflow-y: auto;
     overflow-x: hidden;
     border: 1px solid #ddd; 
     padding: 7.5px 20px;
-    margin: 20px auto;
     background-color: #f9f9f9;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
