--- a/uroomies-client/src/styles/ToggleSwitch.css
+++ b/uroomies-client/src/styles/ToggleSwitch.css
@@ -2,6 +2,7 @@
 .toggle-switch {
     display: inline-block;
     position: relative;
+    vertical-align: middle; /* Aligns with text vertically */
 }
 
 /* Hidden Checkbox */
@@ -9,6 +10,7 @@
     opacity: 0;
     width: 0;
     height: 0;
+    position: absolute; /* Ensure it doesn't affect layout */
 }
 
 /* Toggle Label */
@@ -21,6 +23,7 @@
     position: relative;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin: 0; /* Remove default margins */
 }
 
 /* Toggle Slider */
