--- a/uroomies-client/src/styles/Upload.css
+++ b/uroomies-client/src/styles/Upload.css
@@ -13,10 +13,7 @@
     text-align: center;
     background-color: #f9f9f9;
     transition: border-color 0.3s ease;
-}
-
-.picture-container:hover {
-    border-color: #3a2a65;
+    position: relative;
 }
 
 /* User Icon */
@@ -25,7 +22,8 @@
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
-    margin-bottom: 1rem;
+    margin-bottom: 1rem; 
+    transform: translateX(+10%);
 }
 
 /* Picture Text */
@@ -44,5 +42,5 @@
 .upload-icon {
     width: 40px;
     height: 40px;
-    margin-top: 1rem;
+    margin-top: 1rem; 
 }
