--- a/uroomies-client/src/styles/Information.css
+++ b/uroomies-client/src/styles/Information.css
@@ -40,16 +40,20 @@ html, body {
     gap: 10px;
 }
 
+.made-with-text {
+    font-size: 1.7rem;
+}
+
 /* About project styles */
 .about-project-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .about-project-title {
-    margin-bottom: 10px;
     font-size: 3rem;
 }
 
@@ -60,6 +64,48 @@ html, body {
     line-height: 1.6;
     padding: 10px;
     font-size: 1.7rem;
+    border: solid lightgray;
+    border-radius: 10px;
+}
+
+/* Future development styles */
+.future-plans-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.future-plans-title {
+    font-size: 3rem;
+}
+
+.future-developments {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    border: solid lightgray;
+    border-radius: 10px;
+    width: 1200px;
+}
+
+.future-developments > div {
+    padding: 15px;
+}
+
+.future-developments h2 {
+    font-size: 1.65rem;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+.future-developments p {
+    font-size: 1.2rem;
+    line-height: 1.5;
+    text-align: center;
 }
 
 /* Creator profile styles */
@@ -103,12 +149,17 @@ html, body {
     color: darkgray;
 }
 
+.about-creator-title {
+    font-size: 3rem;
+}
+
 /* Divider styles */
 .custom-divider {
-    width: 1300px;
+    width: 900px;
     border: none;
-    border-top: 3px solid black;
+    border-top: 8px solid #3a2a65;
     margin: 10px auto;
+    border-radius: 5px;
 }
 
 
