--- a/uroomies-client/src/styles/Information.css
+++ b/uroomies-client/src/styles/Information.css
@@ -85,6 +85,7 @@ html, body {
     border: solid lightgray;
     border-radius: 10px;
     box-shadow: 0 6px 10px #3a2a65;
+    margin-bottom: 20px;
 }
 
 /* Future development styles */
@@ -145,6 +146,7 @@ html, body {
     border: solid lightgray;
     border-radius: 10px;
     box-shadow: 0 6px 10px #3a2a65;
+    margin-bottom: 70px;
 }
 
 .creator-profile-container {
