--- a/uroomies-client/src/styles/ProfileSearch.css
+++ b/uroomies-client/src/styles/ProfileSearch.css
@@ -8,7 +8,7 @@
 /* General Styles */
 html, body {
     height: 100%;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Georgia', serif;
     background-color: #f9f9f9;
     color: #333;
     overflow-x: hidden;
@@ -18,21 +18,113 @@ body {
     display: block;
 }
 
+.home-title-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    transition: opacity 0.5s ease-out;
+}
+
+.home-title-area.hide-section {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.home-title {
+    margin-bottom: 20px;
+    margin-top: 200px;
+    font-size: 4rem;
+    font-weight: bolder;
+    color: black;
+}
+
+.search-roommates-button {
+    background-color: #3a2a65;
+    color: white;
+    padding: 20px;
+    border-radius: 2rem;
+    font-size: 1.25rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    width: 20rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.search-roommates-button:hover {
+    transform: translateY(-0.3rem);
+}
+
+.home-description {
+    margin-bottom: 20px;
+    font-size: 2.1rem;
+}
+
+
+
 /* Main Container for Profile Search */
 .profilesearch-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.profilesearch-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../../public/van4.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    opacity: 0.4;
+    z-index: -1;
 }
 
 /* Search Body */
 .searchbody-container {
+    position: relative;
     flex: 1;
     padding: 20px;
     max-width: 800px;
     margin: 0 auto;
     box-sizing: border-box;
     margin-top: 20px;
+    opacity: 0;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    transform: translateY(50px);
+    border: 2px solid black;
+    border-radius: 2rem;
+    margin-bottom: 100px;
+    background-color: white;
+    box-shadow: 0 6px 10px #3a2a65;
+    display: none;
+}
+
+.searchbody-container.show-form {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.searchbody-container.hide-form {
+    opacity: 0;
+    transform: translateY(50px);
+}
+
+.hide-section {
+    display: none;
 }
 
 /* Title */
@@ -41,6 +133,23 @@ body {
     font-size: 2rem;
     margin-bottom: 2rem;
     color: #3a2a65;
+}
+
+.back-to-title-container {
+    display: none;
+}
+
+.back-to-title-container.show-form {
+    display: block;
+}
+
+.back-to-title-button {
+    background-color: #3a2a65;
+    padding: 20px;
+    color: white;
+    border-radius: 2rem;
+    cursor: pointer;
+    font-size: 1rem;
 }
 
 /* Header Margins */
