--- a/uroomies-client/src/styles/HomeHeader.css
+++ b/uroomies-client/src/styles/HomeHeader.css
@@ -4,7 +4,7 @@
     width: 100%;
     padding: 1rem;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     position: relative;
     z-index: 1000;
@@ -31,54 +31,13 @@
     transform: scale(1.1);
 }
 
-
-/* Signout button styles */
-.signout-button {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    margin-left: 60px;
+.home-header-button:not(.profile-button) {
+    margin-right: 20px;
+    margin-left: 40px;
 }
 
-.signout-icon {
-    position: relative;
-    width: 30px;
-    height: 30px;
+.profile-button {
+    margin-left: auto;
+    margin-right: 40px;
 }
 
-.signout-icon::before {
-    content: '';
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    border: 3px solid white;
-    border-radius: 4px;
-    border-right: 0;
-    border-bottom: 0;
-}
-
-.signout-icon::after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-left: 20px solid white;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    top: 12px;
-    left: 30px;
-}
-
-/* Settings button styles */
-.settings-button {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    margin-left: 60px;
-}
-
-.settings-icon {
-    position: relative;
-    width: 40px;
-    height: 40px;
-}
