--- a/uroomies-client/src/styles/Chats.css
+++ b/uroomies-client/src/styles/Chats.css
@@ -1,10 +1,32 @@
+.chat-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.chat-area-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90vw;
+}
+
 .chat-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 10px;
-    max-height: 800px;
+    padding: 20px;
+    height: 80vh;
     overflow-y: auto;
+    width: 60vw;
+    border: 1px solid black;
+    border-radius: 10px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    box-shadow: 0 6px 10px #3a2a65;
+    border-bottom: 0;
+    background-color: white;
 }
 
 .message {
@@ -28,7 +50,7 @@
     align-self: flex-start;
     text-align: left;
     background-color: lightgray;
-    margin-left: 30xp;
+    margin-left: 30px;
 
 }
 
@@ -38,4 +60,32 @@
 
 .message-info {
     font-size: 0.8rem;
+}
+
+.chat-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60vw;
+    padding: 20px;
+    background-color: black;
+    border: solid 1px black;
+    box-shadow: 0 6px 10px #3a2a65;
+    border-radius: 10px;
+    border-top: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    margin-bottom: 100px;
+}
+
+.send-message-button {
+    background-color: transparent;
+    border: none;
+    padding-left: 20px;
+}
+
+.send-message-icon {
+    filter: invert(1) sepia(1) saturate(5) hue-rotate(180deg);
+    width: 45px;
+    height: 45px;
 }
