--- a/uroomies-client/src/styles/ChatRoom.css
+++ b/uroomies-client/src/styles/ChatRoom.css
@@ -4,6 +4,24 @@
     align-items: center;
     justify-content: start;
     min-height: 100vh;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+
+.chatroom-page::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../../public/ubc3.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.3;
+    z-index: -1;
 }
 
 .chatroom-title-area {
