--- a/uroomies-client/src/styles/ChatRoom.css
+++ b/uroomies-client/src/styles/ChatRoom.css
@@ -34,7 +34,35 @@
     padding: 15px;
 }
 
+.select-chat-area input{
+    margin-right: 10px;
+}
+
 .chat-page-title {
     font-size: 3rem;
-    margin-top: 150px;
+    margin-top: 100px;
+    padding: 15px;
+}
+
+.chat-page-description {
+    font-size: 2rem;
+    padding: 15px   ;
+}
+
+.chatroom-title-area input {
+    padding: 15px;
+}
+
+.join-chatroom-button {
+    border-radius: 10px;
+    margin-top: 10px;
+    background-color: #3a2a65;
+    color: white;
+    padding: 20px 40px; 
+    border-radius: 2rem;
+    font-size: 1rem; 
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    border: none;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
 }
